[package]
name = "axfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axio = { path = "../../crates/axio", features = ["alloc"] }
axerrno = { path = "../../crates/axerrno" }
axfs_vfs = { path = "../../crates/axfs_vfs" }
capability = { path = "../../crates/capability" }
fstree = { path = "../fstree" }
