[package]
name = "fstree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
axfs_vfs = { path = "../../crates/axfs_vfs" }
axerrno = { path = "../../crates/axerrno" }
spinlock = { path = "../../crates/spinlock" }
