[package]
name = "run_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sched_cfs"]

sched_cfs = []

[dependencies]
log = "0.4"
cfg-if = "1.0"
mm = { path = "../mm" }
task = { path = "../task" }
spinlock = { path = "../../crates/spinlock" }
lazy_init = { path = "../../crates/lazy_init" }
scheduler = { path = "../../crates/scheduler" }
